--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "widas/cidaas-extension",
-  "description": "cidaas shopware extenstion allow cidaas user to provide admin logins",
+  "description": "cidaas shopware extension allow cidaas user to provide admin logins",
   "type": "shopware-platform-plugin",
   "license": "MIT",
   "version": "1.0.0",
@@ -29,7 +29,6 @@
   "require": {
     "php": ">= 7.2",
     "league/oauth2-client": "~2.0",
-    "cidaas/oauth2-cidaas": "dev-cidaas-php-7.0",
     "shopware/administration": ">= 6.1.3"
   },
   "require-dev": {
