--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     }],
     "require": {
         "php": ">= 7.2",
-        "shopware/core": "^6.0"
+        "shopware/core": "^6.0",
+        "shopware/storefront": "^6.0"
     },
     "extra": {
         "shopware-plugin-class": "Cidaas\\OauthConnect\\CidaasOauthConnect",
