--- a/composer.json
+++ b/composer.json
@@ -1,49 +1,45 @@
 {
-    "name": "cidaas/cidaas-oauth2-connect",
-    "description": "cidaas Oauth2 Connect Plugin",
-    "version": "1.0.0",
-    "type": "shopware-platform-plugin",
+    "name": "cidaas/cidaas-for-shopware",
     "license": "MIT",
+    "description": "Shopware plugin to allow cidaas to provide admin logins",
+    "type": "shopware-platform-plugin",
+    "version": "1.0.1",
     "keywords": [
         "cidaas",
         "shopware",
-        "oauth2",
-        "openid"
+        "shopware-platform",
+        "openid",
+        "oauth"
     ],
-    "authors": [{
-        "name": "Widas GmbH",
-        "homepage": "https://cidaas.com",
-        "role": "Manufacturer"
-    }],
+    "authors": [
+        {
+            "name": "Widas GmbH",
+            "role": "Manufacturer"
+        }
+    ],
+    "autoload": {
+        "psr-4": {
+            "Cidaas\\OpenAuth\\": "src/"
+        }
+    },
     "require": {
         "php": ">= 7.2",
-        "shopware/core": "^6.0",
-        "shopware/storefront": "^6.0"
+        "league/oauth2-client": "~2.0",
+        "shopware/administration": ">= 6.1.3"
+    },
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "^2.16",
+        "kubawerlos/php-cs-fixer-custom-fixers": "^1.17"
     },
     "extra": {
-        "shopware-plugin-class": "Cidaas\\OauthConnect\\CidaasOauthConnect",
-        "plugin-icon": "src/Resources/config/plugin.png",
-        "copyright": "(c) by Widas ID GmbH",
+        "shopware-plugin-class": "Cidaas\\OpenAuth\\CidaasOpenAuth",
         "label": {
             "de-DE": "OAuth Login für Administration",
             "en-GB": "OAuth login for administration"
         },
         "description": {
-            "de-DE": "Cidaas OpenId Connect Login",
-            "en-GB": "Cidaas OpenId Connect Login"
-        },
-        "manufacturerLink": {
-            "de-DE": "https://cidaas.com",
-            "en-GB": "https://cidaas.com"
-        },
-        "supportLink": {
-            "de-DE": "https://docs.cidaas.de",
-            "en-GB": "https://docs.cidaas.de"
-        }
-    },
-    "autoload": {
-        "psr-4": {
-            "Cidaas\\OauthConnect\\": "src/"
+            "de-DE": "Verbindet OAuth Anbieter zum Administrationslogin",
+            "en-GB": "Connects oauth providers to admin login"
         }
     }
 }
